{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 146,
  "lineage": "bba85ed8-becc-64b4-cac1-8c00c64ffa09",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0303e8eb8fe49446a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.19.0/27",
            "default_for_az": false,
            "id": "subnet-0303e8eb8fe49446a",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0e3701aeda970e911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.19.32/27",
            "default_for_az": false,
            "id": "subnet-0e3701aeda970e911",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0eacde259da650ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.19.64/27",
            "default_for_az": false,
            "id": "subnet-0eacde259da650ca4",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0070309936121e03b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.18.0/27",
            "default_for_az": false,
            "id": "subnet-0070309936121e03b",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-public-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0ca4adea4e79aaf13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.18.32/27",
            "default_for_az": false,
            "id": "subnet-0ca4adea4e79aaf13",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-public-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0b027a3602f4b163e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.18.64/27",
            "default_for_az": false,
            "id": "subnet-0b027a3602f4b163e",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-public-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:vpc/vpc-09a823314984bd240",
            "cidr_block": "10.26.18.0/23",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07b7be83b617fffe1",
                "cidr_block": "10.26.18.0/23",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-03a2656108fa910fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a823314984bd240",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07a8be7463850e1d4",
            "owner_id": "326767204872",
            "state": "available",
            "tags": {
              "Name": "q2-jcgqk-vpc",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          },
          "depends_on": [
            "aws_vpc.new_vpc[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cd2b83bd1f4e1d25",
            "public_dns": "ec2-13-237-20-43.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.237.20.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "q2-jcgqk-eip-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0f298210cfc76fd81",
            "public_dns": "ec2-52-63-154-150.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.63.154.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "q2-jcgqk-eip-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-068d415e9b4cb6c36",
            "public_dns": "ec2-3-104-193-204.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.193.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "q2-jcgqk-eip-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03793ef8401e594b0",
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:instance/i-03d796715b87bd186",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "q2-jcgqk-master-profile",
            "id": "i-03d796715b87bd186",
            "instance_state": "running",
            "instance_type": "r5.xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-036c660d769a0912f"
              }
            ],
            "primary_network_interface_id": "eni-036c660d769a0912f",
            "private_dns": "ip-10-26-19-25.ap-southeast-2.compute.internal",
            "private_ip": "10.26.19.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 360,
                "volume_id": "vol-01f26c8fa9ef3aafe",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0303e8eb8fe49446a",
            "tags": {
              "Name": "q2-jcgqk-master-0",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "q2-jcgqk-master-0-vol",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_security_group_ids": [
              "sg-09a0ab0fc600e712c"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master",
            "aws_network_interface.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03793ef8401e594b0",
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:instance/i-03f98cd5b860521dc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "q2-jcgqk-master-profile",
            "id": "i-03f98cd5b860521dc",
            "instance_state": "running",
            "instance_type": "r5.xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-042da51c69e19fc7d"
              }
            ],
            "primary_network_interface_id": "eni-042da51c69e19fc7d",
            "private_dns": "ip-10-26-19-43.ap-southeast-2.compute.internal",
            "private_ip": "10.26.19.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 360,
                "volume_id": "vol-0c189249e4d1ee8eb",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3701aeda970e911",
            "tags": {
              "Name": "q2-jcgqk-master-1",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "q2-jcgqk-master-1-vol",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_security_group_ids": [
              "sg-09a0ab0fc600e712c"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master",
            "aws_network_interface.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03793ef8401e594b0",
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:instance/i-004a4100c4122e86a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2c",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "q2-jcgqk-master-profile",
            "id": "i-004a4100c4122e86a",
            "instance_state": "running",
            "instance_type": "r5.xlarge",
            "ipv6_address_count": 0,
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02fe5ef79404cbddb"
              }
            ],
            "primary_network_interface_id": "eni-02fe5ef79404cbddb",
            "private_dns": "ip-10-26-19-93.ap-southeast-2.compute.internal",
            "private_ip": "10.26.19.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 360,
                "volume_id": "vol-01db028ac8ec0e53b",
                "volume_size": 120,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eacde259da650ca4",
            "tags": {
              "Name": "q2-jcgqk-master-2",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "q2-jcgqk-master-2-vol",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_security_group_ids": [
              "sg-09a0ab0fc600e712c"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.master",
            "aws_network_interface.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-07860b802cac516d5",
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-igw",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-ext/24b4243e109d1847",
            "arn_suffix": "net/q2-jcgqk-ext/24b4243e109d1847",
            "dns_name": "q2-jcgqk-ext-24b4243e109d1847.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-ext/24b4243e109d1847",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "q2-jcgqk-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0070309936121e03b"
              },
              {
                "subnet_id": "subnet-0b027a3602f4b163e"
              },
              {
                "subnet_id": "subnet-0ca4adea4e79aaf13"
              }
            ],
            "subnets": [
              "subnet-0070309936121e03b",
              "subnet-0b027a3602f4b163e",
              "subnet-0ca4adea4e79aaf13"
            ],
            "tags": {
              "Name": "q2-jcgqk-ext",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-09a823314984bd240",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "data.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-int/e30879453a0fafb1",
            "arn_suffix": "net/q2-jcgqk-int/e30879453a0fafb1",
            "dns_name": "q2-jcgqk-int-e30879453a0fafb1.elb.ap-southeast-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-int/e30879453a0fafb1",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "q2-jcgqk-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0303e8eb8fe49446a"
              },
              {
                "subnet_id": "subnet-0e3701aeda970e911"
              },
              {
                "subnet_id": "subnet-0eacde259da650ca4"
              }
            ],
            "subnets": [
              "subnet-0303e8eb8fe49446a",
              "subnet-0e3701aeda970e911",
              "subnet-0eacde259da650ca4"
            ],
            "tags": {
              "Name": "q2-jcgqk-int",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-09a823314984bd240",
            "zone_id": "ZCT6FZBF4DROD"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "data.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-jcgqk-ext/24b4243e109d1847/4b8083e7c5f442c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-jcgqk-ext/24b4243e109d1847/4b8083e7c5f442c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-ext/24b4243e109d1847",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.api_external[0]",
            "aws_lb_target_group.api_external[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-jcgqk-int/e30879453a0fafb1/acf8b85fda9bc985",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-jcgqk-int/e30879453a0fafb1/acf8b85fda9bc985",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-int/e30879453a0fafb1",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.api_internal",
            "aws_lb_target_group.api_internal"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-jcgqk-int/e30879453a0fafb1/9131c26571d88132",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:listener/net/q2-jcgqk-int/e30879453a0fafb1/9131c26571d88132",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:loadbalancer/net/q2-jcgqk-int/e30879453a0fafb1",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.api_internal",
            "aws_lb_target_group.services"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
            "arn_suffix": "targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
            "lambda_multi_value_headers_enabled": false,
            "name": "q2-jcgqk-aext",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "q2-jcgqk-aext",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
            "arn_suffix": "targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
            "lambda_multi_value_headers_enabled": false,
            "name": "q2-jcgqk-aint",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "q2-jcgqk-aint",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
            "arn_suffix": "targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
            "lambda_multi_value_headers_enabled": false,
            "name": "q2-jcgqk-sint",
            "port": 22623,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "Name": "q2-jcgqk-sint",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828-2020052023393682900000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
            "target_id": "10.26.19.25"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f-20200520233936759000000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
            "target_id": "10.26.19.25"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595-20200520233936823400000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
            "target_id": "10.26.19.25"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828-2020052023393708510000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
            "target_id": "10.26.19.43"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f-20200520233936825200000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
            "target_id": "10.26.19.43"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595-2020052023393708790000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
            "target_id": "10.26.19.43"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828-20200520233936754900000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aint/8b4748cd01dd6828",
            "target_id": "10.26.19.93"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f-2020052023393683980000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-sint/76e8aed525568d3f",
            "target_id": "10.26.19.93"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595-20200520233936759200000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:326767204872:targetgroup/q2-jcgqk-aext/88ed6062a61dd595",
            "target_id": "10.26.19.93"
          },
          "depends_on": [
            "aws_instance.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03716173e528aaf06",
            "original_route_table_id": "rtb-0569aea5af92e6c88",
            "route_table_id": "rtb-07a8be7463850e1d4",
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cd2b83bd1f4e1d25",
            "id": "nat-08ff47dc4f725b1d3",
            "network_interface_id": "eni-0d1717545258bf3bf",
            "private_ip": "10.26.18.22",
            "public_ip": "13.237.20.43",
            "subnet_id": "subnet-0070309936121e03b",
            "tags": {
              "Name": "q2-jcgqk-nat-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f298210cfc76fd81",
            "id": "nat-088b4eef4f90c8717",
            "network_interface_id": "eni-0e0321282294b58b2",
            "private_ip": "10.26.18.62",
            "public_ip": "52.63.154.150",
            "subnet_id": "subnet-0ca4adea4e79aaf13",
            "tags": {
              "Name": "q2-jcgqk-nat-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068d415e9b4cb6c36",
            "id": "nat-0724ef480ec198b70",
            "network_interface_id": "eni-0e3906d03779690e2",
            "private_ip": "10.26.18.75",
            "public_ip": "3.104.193.204",
            "subnet_id": "subnet-0b027a3602f4b163e",
            "tags": {
              "Name": "q2-jcgqk-nat-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          },
          "depends_on": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-036c660d769a0912f",
            "private_dns_name": "ip-10-26-19-25.ap-southeast-2.compute.internal",
            "private_ip": "10.26.19.25",
            "private_ips": [
              "10.26.19.25"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09a0ab0fc600e712c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0303e8eb8fe49446a",
            "tags": {
              "Name": "q2-jcgqk-master-0",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-042da51c69e19fc7d",
            "private_dns_name": "ip-10-26-19-43.ap-southeast-2.compute.internal",
            "private_ip": "10.26.19.43",
            "private_ips": [
              "10.26.19.43"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09a0ab0fc600e712c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3701aeda970e911",
            "tags": {
              "Name": "q2-jcgqk-master-1",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "eni-02fe5ef79404cbddb",
            "private_dns_name": "ip-10-26-19-93.ap-southeast-2.compute.internal",
            "private_ip": "10.26.19.93",
            "private_ips": [
              "10.26.19.93"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09a0ab0fc600e712c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eacde259da650ca4",
            "tags": {
              "Name": "q2-jcgqk-master-2",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07860b802cac516d5",
            "id": "r-rtb-07a8be7463850e1d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a8be7463850e1d4",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.igw[0]",
            "aws_route_table.default[0]"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04879b98ef575a48d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-08ff47dc4f725b1d3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04879b98ef575a48d",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_routes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9cde72a8b5a41791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-088b4eef4f90c8717",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9cde72a8b5a4179",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_routes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078aa7325d001070f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0724ef480ec198b70",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078aa7325d001070f",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_routes"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07a8be7463850e1d4",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-jcgqk-public",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04879b98ef575a48d",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c9cde72a8b5a4179",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-078aa7325d001070f",
            "owner_id": "326767204872",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a19f39303c8ee5e0",
            "route_table_id": "rtb-04879b98ef575a48d",
            "subnet_id": "subnet-0303e8eb8fe49446a"
          },
          "depends_on": [
            "aws_route_table.private_routes",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0342bbf27b9f6de99",
            "route_table_id": "rtb-0c9cde72a8b5a4179",
            "subnet_id": "subnet-0e3701aeda970e911"
          },
          "depends_on": [
            "aws_route_table.private_routes",
            "aws_subnet.private_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea8deca6ea214952",
            "route_table_id": "rtb-078aa7325d001070f",
            "subnet_id": "subnet-0eacde259da650ca4"
          },
          "depends_on": [
            "aws_route_table.private_routes",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c70ae87a42d142b9",
            "route_table_id": "rtb-07a8be7463850e1d4",
            "subnet_id": "subnet-0070309936121e03b"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a045ec8fdbff1f0",
            "route_table_id": "rtb-07a8be7463850e1d4",
            "subnet_id": "subnet-0ca4adea4e79aaf13"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b954446fde7c24c",
            "route_table_id": "rtb-07a8be7463850e1d4",
            "subnet_id": "subnet-0b027a3602f4b163e"
          },
          "depends_on": [
            "aws_route_table.default[0]",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:security-group/sg-09a0ab0fc600e712c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a0ab0fc600e712c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.26.18.0/23"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.26.18.0/23"
                ],
                "description": "",
                "from_port": 22623,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22623
              },
              {
                "cidr_blocks": [
                  "10.26.18.0/23"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.26.18.0/23"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10257,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 10257
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10259,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 10259
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2380
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 4789
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 6081
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6641,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 6642
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00510281eb4d5d2b4"
                ],
                "self": true,
                "to_port": 9999
              }
            ],
            "name": "terraform-20200520233419324800000003",
            "name_prefix": null,
            "owner_id": "326767204872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "q2-jcgqk-master-sg",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:security-group/sg-00510281eb4d5d2b4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00510281eb4d5d2b4",
            "ingress": [],
            "name": "terraform-20200520233419279400000002",
            "name_prefix": null,
            "owner_id": "326767204872",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "q2-jcgqk-worker-sg",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2764269847",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2379,
            "id": "sgrule-3406818666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-3265557156",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-922888927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.18.0/23"
            ],
            "description": null,
            "from_port": 6443,
            "id": "sgrule-777145012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.18.0/23"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1099085272",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-976477170",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3482682249",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1808408678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2657908765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-1307884404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10257,
            "id": "sgrule-3092439823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 10257,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-2373509111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10259,
            "id": "sgrule-2027849612",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 10259,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-3221883413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-900485742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-2194230317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6641,
            "id": "sgrule-2003768406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 6642,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-602361756",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-3594590183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2277043315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1914614792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.18.0/23"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1367012198",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-1315701660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-3150601191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": "sg-00510281eb4d5d2b4",
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.18.0/23"
            ],
            "description": null,
            "from_port": 22623,
            "id": "sgrule-3844336490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09a0ab0fc600e712c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1063001240",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-434576331",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6081,
            "id": "sgrule-3963700144",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 6081,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.18.0/23"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1562666453",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-3782259357",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-349629158",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-2961787145",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 9000,
            "id": "sgrule-1160712562",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-1255975908",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 10250,
            "id": "sgrule-3212506015",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 10250,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-2838621805",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-1553446422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-225332610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 30000,
            "id": "sgrule-4173862393",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 32767,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.26.18.0/23"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3023893185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-2502912755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": true,
            "source_security_group_id": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4789,
            "id": "sgrule-1619604104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-00510281eb4d5d2b4",
            "self": false,
            "source_security_group_id": "sg-09a0ab0fc600e712c",
            "to_port": 4789,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.master",
            "aws_security_group.worker"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0303e8eb8fe49446a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.19.0/27",
            "id": "subnet-0303e8eb8fe49446a",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0e3701aeda970e911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.19.32/27",
            "id": "subnet-0e3701aeda970e911",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0eacde259da650ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.19.64/27",
            "id": "subnet-0eacde259da650ca4",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-private-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0070309936121e03b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.26.18.0/27",
            "id": "subnet-0070309936121e03b",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-public-ap-southeast-2a",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0ca4adea4e79aaf13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.26.18.32/27",
            "id": "subnet-0ca4adea4e79aaf13",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-public-ap-southeast-2b",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:subnet/subnet-0b027a3602f4b163e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.26.18.64/27",
            "id": "subnet-0b027a3602f4b163e",
            "map_public_ip_on_launch": false,
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-public-ap-southeast-2c",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            },
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:326767204872:vpc/vpc-09a823314984bd240",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.18.0/23",
            "default_network_acl_id": "acl-0a2ad4209fc13496d",
            "default_route_table_id": "rtb-07a8be7463850e1d4",
            "default_security_group_id": "sg-0854a637e9108e9bd",
            "dhcp_options_id": "dopt-03a2656108fa910fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a823314984bd240",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07a8be7463850e1d4",
            "owner_id": "326767204872",
            "tags": {
              "Name": "q2-jcgqk-vpc",
              "cir_app_id": "osecp",
              "kubernetes.io/cluster/q2-jcgqk": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.248.0/22",
              "52.95.128.0/21"
            ],
            "id": "vpce-0d8052d831f2791a6",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ca54005",
            "private_dns_enabled": false,
            "route_table_ids": [
              "rtb-04879b98ef575a48d",
              "rtb-078aa7325d001070f",
              "rtb-07a8be7463850e1d4",
              "rtb-0c9cde72a8b5a4179"
            ],
            "service_name": "com.amazonaws.ap-southeast-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09a823314984bd240"
          },
          "depends_on": [
            "aws_route_table.default",
            "aws_route_table.private_routes",
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}